# Translator

./: ASMcode.asm  CMakeLists.txt  GraphExpr.graph  InputCode.minic  README.md  ResultAtom.atom  main.cpp
Google_test/: CMakeLists.txt  lexTests.cpp
LexerLib/: CMakeLists.txt
LexerLib/include/: Graph.h  Lexer.h
LexerLib/src/: Graph.cpp  Lexer.cpp
Translator/: CMakeLists.txt
Translator/include/: Translator.h
Translator/src/: Functions.cpp  GrammExpr.cpp  LangGrammar.cpp  Translator.cpp  printAsm.cpp  printAtoms.cpp
